#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])
AC_INIT(kouzan, 0.1, [BUG-REPORT-ADDRESS])
AM_INIT_AUTOMAKE(kouzan, 0.1, [NO-DEFINE])
AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.
case $host_os in
  darwin* )
	LDFLAGS+='-framework OpenGL -framework GLUT'
        ;;
    *)
	AC_CHECK_LIB([GL], [glBegin])
	AC_CHECK_LIB([GLU], [gluLookAt])
	AC_CHECK_LIB([glut], [glutMouseFunc])
	CPPFLAGS+='-mcmodel=large'
        ;;
esac

AC_CHECK_LIB([z], [gzopen])

# Checks for header files.
AC_CHECK_HEADERS([stdint.h stdlib.h string.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([memset])

AC_CONFIG_FILES([Makefile src/Makefile])
AC_OUTPUT
